fix: align melismas

--- a/docs/sample2.css
+++ b/docs/sample2.css
@@ -4,7 +4,7 @@
   --byz-neume-font-family: Neanes;
   --byz-neume-font-size: 20pt;
 
-  --byz-lyric-font-family: Arial, san-serif;
+  --byz-lyric-font-family: Arial, sans-serif;
   --byz-lyric-font-size: 12pt;
   --byz-lyric-offset-h: 4pt;
   --byz-lyric-offset-v: -3pt;
